--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "serve": "npm run --prefix ./client serve"
     },
     "dependencies": {
+        "axios": "^0.19.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.16.0",
         "connect-mongo": "^3.2.0",
@@ -17,7 +18,7 @@
         "cors": "^2.8.1",
         "dotenv": "^8.1.0",
         "esm": "^3.2.25",
-        "express": "^4.14.1",
+        "express": "^4.17.1",
         "express-session": "^1.15.0",
         "mongoose": "^5.8.4"
     },
