--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.15.0",
-    "mongoose": "^5.8.4"
+    "mongoose": "^5.8.4",
+    "sweetalert2": "^9.6.0"
   },
   "engines": {
     "node": "^10.0.0",
