--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "sweetalert2": "^9.6.0",
     "vue": "^2.5.17",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
