--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.1",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "sweetalert2": "^9.6.0",
     "vue": "^2.5.17",
     "vue-bootstrap-datetimepicker": "^5.0.1",
