--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.15.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.4",
     "sweetalert2": "^9.6.0"
   },
